--- a/Animalerie.DAL/Animalerie.DAL.csproj
+++ b/Animalerie.DAL/Animalerie.DAL.csproj
@@ -1,20 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+    <PackageReference Include="Npgsql" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Animalerie.BLL\Animalerie.BLL.csproj" />
     <ProjectReference Include="..\Animalerie.Domain\Animalerie.Domain.csproj" />
-    <ProjectReference Include="..\Tools.ConsoleApp\Tools.ConsoleApp.csproj" />
+    <ProjectReference Include="..\Tools.Database\Tools.Database.csproj" />
   </ItemGroup>
 
 </Project>
