--- a/Animalerie.BLL/Animalerie.BLL.csproj
+++ b/Animalerie.BLL/Animalerie.BLL.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Animalerie.Domain\Animalerie.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CustomExceptions\Animal\" />
+  </ItemGroup>
+
 </Project>
